# yagi

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  indev.cpp  indev.h
include/: CMakeLists.txt
include/yagi/: yagi.h  yagi_imconfig.h
include/yagi/app/: application.h  glfw_callbacks.h  oracle.h  window.h
include/yagi/core/: application.h  glfw_callbacks.h  inputmgr.h  oracle.h  window.h
include/yagi/gfx/: color.h  context.h
include/yagi/gfx/gl/: buffer_base.h  framebuffer.h  shader.h  static_buffer.h  vertex_array.h
include/yagi/msg/: bus.h  msg.h  msg_def.h
include/yagi/util/: averagers.h  enum_bitmask_ops.h  framecounter.h  log.h  overloaded.h  platform.h  rnd.h  ticker.h  time.h
include/yagi/util/noise/: perlin.h
src/: CMakeLists.txt
src/yagi/app/: application.cpp  glfw_callbacks.cpp  oracle.cpp  window.cpp
src/yagi/core/: application.cpp  glfw_callbacks.cpp  inputmgr.cpp  oracle.cpp  window.cpp
src/yagi/gfx/: color.cpp  context.cpp
src/yagi/gfx/gl/: buffer_base.cpp  framebuffer.cpp  shader.cpp  vertex_array.cpp
src/yagi/msg/: bus.cpp
src/yagi/util/: averagers.cpp  framecounter.cpp  log.cpp  rnd.cpp  ticker.cpp  time.cpp
src/yagi/util/noise/: perlin.cpp
